--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,65 +1,50 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="utf-8">
-    <!-- Make site responsive on mobile/tablet -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>YelpCamp</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/stylesheets/main.css">
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <title>YelpCamp</title>
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+      <link rel="stylesheet" href="/stylesheets/main.css">
   </head>
   <body>
-
-    <nav class="navbar navbar-default navbar-fixed-top">
+  <nav class="navbar navbar-default">
       <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/">YelpCamp</a>
-        </div>
+          <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
 
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="<%= typeof page !== 'undefined' && page === 'campgrounds' ? 'active' : '' %>"><a href="/campgrounds">Home</a></li>
-          </ul>
-          <div class="col-sm-3 col-md-3">
-            <form class="navbar-form" role="search" action="/campgrounds" method="get">
-              <div class="input-group">
-                <input class="form-control" type="text" name="search" placeholder="Search">
-                <div class="input-group-btn">
-                  <button type="submit" class="btn btn-default"><i class="glyphicon glyphicon-search"></i></button>
-                </div>
-              </div>
-            </form>
+              <a class="navbar-brand" href="/">YelpCamp</a>
           </div>
-          <ul class="nav navbar-nav navbar-right">
-            <% if (!currentUser) { %>
-              <li class="<%= typeof page !== 'undefined' && page === 'login' ? 'active' : '' %>"><a href="/accounts/login">Login</a></li>
-              <li class="<%= typeof page !== 'undefined' && page === 'register' ? 'active' : '' %>"><a href="/accounts/register">Sign Up</a></li>
-            <% } else { %>
-              <li><a href="#">Signed in as <strong><%= currentUser.username %></strong></a></li>
-              <li><a href="/accounts/logout">Logout</a></li>
-            <% } %>
-          </ul>
-        </div>
+          <div id="navbar" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+              <li class="<%= typeof page !== 'undefined' && page === 'campgrounds' ? 'active' : '' %>"><a href="/campgrounds">Home</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <% if(!currentUser){ %>
+                    <li class="<%= typeof page !== 'undefined' && page === 'login' ? 'active' : '' %>"><a href="/login">Login</a></li>
+                    <li class="<%= typeof page !== 'undefined' && page === 'register' ? 'active' : '' %>"><a href="/register">Sign Up</a></li>
+                <% } else { %>
+                    <li><a href="#">Signed In As <%= currentUser.username %></a></li>
+                    <li><a href="/logout">Logout</a></li>
+                <% } %>
+            </ul>
+          </div>
       </div>
-    </nav>
-
-    <div class="container">
-      <% if (error && error.length > 0) { %>
-        <div class="alert alert-danger" role="alert">
-          <%= error %>
-        </div>
-      <% } %>
-      <% if (success && success.length > 0) { %>
-        <div class="alert alert-success" role="alert">
-          <%= success %>
-        </div>
-      <% } %>
-    </div>
-
-    <div class="container">
+  </nav>
+  
+  <div class="container">
+     <% if(error && error.length > 0) { %>
+       <div class="alert alert-danger"><p><%=error %></p></div>
+     <% } %>
+     
+     <% if(success && success.length > 0) { %>
+       <div class="alert alert-success"><p><%= success %></p></div>
+     <% } %>
+  </div>
+  <div class="container">
