--- a/public/stylesheets/landing.css
+++ b/public/stylesheets/landing.css
@@ -5,6 +5,7 @@ body {
 .landing-header {
   z-index: 1;
   position: relative;
+  /*center heading*/
   text-align: center;
   padding-top: 40vh;
 }
@@ -42,22 +43,18 @@ body {
 .slideshow li:nth-child(1) {
   background-image: url(http://i.imgur.com/K3mPv14.jpg)
 }
-
 .slideshow li:nth-child(2) {
   background-image: url(http://i.imgur.com/SBEmFpv.jpg);
   animation-delay: 10s;
 }
-
 .slideshow li:nth-child(3) {
   background-image: url(http://i.imgur.com/emvhOnb.jpg);
   animation-delay: 20s;
 }
-
 .slideshow li:nth-child(4) {
   background-image: url(http://i.imgur.com/2LSMCmJ.jpg);
   animation-delay: 30s;
 }
-
 .slideshow li:nth-child(5) {
   background-image: url(http://i.imgur.com/TVGe0Ef.jpg);
   animation-delay: 40s;
@@ -80,9 +77,7 @@ body {
   }
 }
 
-
 /* Older browser support - .no-cssanimations class added by modernizr */
-
 .no-cssanimations .slideshow li {
-  opacity: 1;
+	opacity: 1;
 }
