--- a/public/stylesheets/landing.css
+++ b/public/stylesheets/landing.css
@@ -1,20 +1,24 @@
 body {
-  background-color: black;
+  background-color: #000;
 }
 
-.landing-header {
+h1 {
+  font-size: 4em;
+  text-shadow: 2px 2px 10px black;
+}
+
+#landing-header {
   z-index: 1;
   position: relative;
-  /*center heading*/
   text-align: center;
   padding-top: 40vh;
 }
 
-.landing-header h1 {
-  color: white;
+#landing-header h1 {
+  color: #fff;
 }
 
-.slideshow {
+.slideshow { 
   position: fixed;
   width: 100%;
   height: 100%;
@@ -26,7 +30,7 @@ body {
   padding: 0;
 }
 
-.slideshow li {
+.slideshow li { 
   width: 100%;
   height: 100%;
   position: absolute;
@@ -37,32 +41,32 @@ body {
   background-repeat: no-repeat;
   opacity: 0;
   z-index: 0;
-  animation: imageAnimation 50s linear infinite;
+  animation: imageAnimation 50s linear infinite; 
 }
 
-.slideshow li:nth-child(1) {
-  background-image: url(http://i.imgur.com/K3mPv14.jpg)
+.slideshow li:nth-child(1) { 
+  background-image: url(http://i.imgur.com/K3mPv14.jpg) 
 }
-.slideshow li:nth-child(2) {
+.slideshow li:nth-child(2) { 
   background-image: url(http://i.imgur.com/SBEmFpv.jpg);
-  animation-delay: 10s;
+  animation-delay: 10s; 
 }
-.slideshow li:nth-child(3) {
+.slideshow li:nth-child(3) { 
   background-image: url(http://i.imgur.com/emvhOnb.jpg);
-  animation-delay: 20s;
+  animation-delay: 20s; 
 }
-.slideshow li:nth-child(4) {
+.slideshow li:nth-child(4) { 
   background-image: url(http://i.imgur.com/2LSMCmJ.jpg);
-  animation-delay: 30s;
+  animation-delay: 30s; 
 }
-.slideshow li:nth-child(5) {
+.slideshow li:nth-child(5) { 
   background-image: url(http://i.imgur.com/TVGe0Ef.jpg);
-  animation-delay: 40s;
+  animation-delay: 40s; 
 }
 
-@keyframes imageAnimation {
-  0% {
-    opacity: 0;
+@keyframes imageAnimation { 
+  0% { 
+    opacity: 0; 
     animation-timing-function: ease-in;
   }
   10% {
@@ -79,5 +83,5 @@ body {
 
 /* Older browser support - .no-cssanimations class added by modernizr */
 .no-cssanimations .slideshow li {
-	opacity: 1;
+    opacity: 1;
 }
