--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,59 +1,52 @@
+/* Sticky footer styles
+-------------------------------------------------- */
+html {
+  position: relative;
+  min-height: 100%;
+}
 body {
-  padding-top: 70px;
-  margin-bottom: 20px;
+  /* Margin bottom by footer height */
+  margin-bottom: 60px;
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+  background-color: #f5f5f5;
 }
 
+.container .text-muted {
+  margin: 20px 0;
+}
+
+/* Thumbnail styles */
 .thumbnail img {
-  width: 100%;
+    width: 100%;
 }
 
 .thumbnail {
-  padding: 0;
+    padding: 0;
 }
 
 .thumbnail .caption-full {
-  padding: 9px;
+    padding: 9px;
 }
 
-.delete-form {
-  display: inline;
-}
-
-.flex {
-  display: -webkit-box;
-  display: -moz-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-
-  -webkit-flex-wrap: wrap;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-}
-
-/* work around for flex-wrap in safari */
-.flex.container:before,
-.flex.container:after,
-.flex.row:before,
-.flex.row:after {
-  content: normal;
-}
-
-h1 {
-  text-align: center;
-}
-
-.entry-form {
-  width: 30%;
-  margin: 25px auto;
-}
-
-legend {
-  text-align: center;
-}
-
-/* Google Maps */
+/* Google Map styles */
 #map {
-  height: 400px;
-  width: 100%;
+	height: 400px;
+	width: 100%;
+}
+
+/* Campground show page delete button */
+.delete-form {
+	display: inline-block;
+}
+
+/* Flexbox grid fix */
+.flex-wrap {
+  display:flex;
+  flex-wrap: wrap;
 }
