--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,33 +1,34 @@
 <% include ../partials/header %>
-
-<div class="row entry-form">
-  <form action="/campgrounds" method="post">
-    <legend>Create a New Campground</legend>
-    <div class="form-group">
-      <label for="name">Name</label>
-      <input id="name" class="form-control" type="text" name="campground[name]" placeholder="name" autofocus required>
+    <div class="row">
+        <h1 style="text-align: center">Create a New Campground</h1>
+        <div style="width: 30%; margin: 25px auto;">
+            <form action="/campgrounds" method="POST">
+                <div class="form-group">
+                    <label for="name">Name</label>
+                    <input class="form-control" type="text" name="name" id="name" placeholder="Yosemite">
+                </div>
+                <div class="form-group">
+                    <label for="image">Image Url</label>
+                    <input class="form-control" type="text" name="image" id="image" placeholder="https://source.unsplash.com/TCCCKgdFmBo">
+                </div>
+                <div class="form-group">
+                    <label for="cost">Cost</label>
+                    <input class="form-control" type="number" name="cost" id="cost" placeholder="9.99" step="0.01" min="0" required>
+                </div>
+                <div class="form-group">
+                    <label for="location">Location</label>
+                    <input class="form-control" type="text" name="location" id="location" placeholder="Yosemite National Park, CA">
+                </div>
+                <div class="form-group">
+                    <label for="description">Description</label>
+                    <input class="form-control" type="text" name="description" id="description" placeholder="California’s Sierra Nevada mountains.">
+                </div>
+                <div class="form-group">
+                    <button class="btn btn-lg btn-primary btn-block">Submit!</button>
+                </div>
+            </form>
+            <a href="/campgrounds">Go Back</a>
+        </div>
     </div>
-    <div class="form-group">
-      <label for="image">Image</label>
-      <input id="image" class="form-control" type="text" name="campground[image]" placeholder="image url" required>
-    </div>
-    <div class="form-group">
-      <label for="description">Description</label>
-      <input id="description" class="form-control" type="text" name="campground[description]" placeholder="description" required>
-    </div>
-    <div class="form-group">
-      <label for="price">Price</label>
-      <input id="price" class="form-control" type="number" name="campground[price]" placeholder="price" min="0.01" step="0.01" required>
-    </div>
-    <div class="form-group">
-      <label for="location">Location</label>
-      <input id="location" class="form-control" type="text" name="location" placeholder="location" required>
-    </div>
-    <div class="form-group">
-      <button class="btn btn-lg btn-primary btn-block">Submit!</button>
-    </div>
-  </form>
-  <a href="/campgrounds">Go Back</a>
-</div>
-
 <% include ../partials/footer %>
+
