--- a/views/comments/edit.ejs
+++ b/views/comments/edit.ejs
@@ -1,17 +1,17 @@
 <% include ../partials/header %>
-
-<div class="row entry-form">
-  <form action="/campgrounds/<%= campground_id %>/comments/<%= comment._id %>?_method=put" method="post">
-    <legend>Edit Comment</legend>
-    <div class="form-group">
-      <label for="comment">Comment</label>
-      <input id="comment" class="form-control" type="text" name="comment[text]" value="<%= comment.text %>" autofocus required>
+    <div class="row">
+        <h1 style="text-align: center">Edit Comment</h1>
+        <div style="width: 30%; margin: 25px auto;">
+            <form action="/campgrounds/<%= campground_id %>/comments/<%=comment._id %>?_method=PUT" method="POST">
+                <div class="form-group">
+                    <input class="form-control" type="text" value="<%=comment.text %>" name="comment[text]" placeholder="text">
+                </div>
+                <div class="form-group">
+                    <button class="btn btn-lg btn-primary btn-block">Submit!</button>
+                </div>
+            </form>
+            <a href="/campgrounds">Go Back</a>
+        </div>
     </div>
-    <div class="form-group">
-      <button class="btn btn-lg btn-primary btn-block">Submit!</button>
-    </div>
-  </form>
-    <a href="/campgrounds">Go Back</a>
-</div>
-
 <% include ../partials/footer %>
+
