--- a/views/register.ejs
+++ b/views/register.ejs
@@ -4,24 +4,31 @@
         <div style="width: 30%; margin: 25px auto;">
             <form action="/register" method="post">
                 <div class="form-group">
+                    <label>Username</label>
                     <input class="form-control" type="text" name="username" placeholder="username">
                 </div>
                 <div class="form-group">
+                    <label>Password</label>
                     <input class="form-control" type="password" name="password" placeholder="password">
                 </div>
                 <div class="form-group">
+                    <label>First Name</label>
                     <input class="form-control" type="text" name="firstName" placeholder="first name">
                 </div>
                 <div class="form-group">
+                    <label>Last Name</label>
                     <input class="form-control" type="text" name="lastName" placeholder="last name">
                 </div>
                 <div class="form-group">
+                    <label>Email</label>
                     <input class="form-control" type="email" name="email" placeholder="email">
                 </div>
                 <div class="form-group">
-                    <input class="form-control" type="text" name="avatar" placeholder="avatar url">
+                    <label>Profile Picture</label>
+                    <input class="form-control" type="text" name="avatar" placeholder="image url">
                 </div>
                 <div class="form-group">
+                    <label>Admin Code</label>
                     <input class="form-control" type="text" name="adminCode" placeholder="admin code">
                 </div>
                 <div class="form-group">
