Additional Asthetic Changes

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,7 @@
         </div><!-- /.container -->
         <footer class="footer">
           <div class="container">
-            <p class="text-muted">&copy; Philip Tang 2017 | <a href="/campgrounds">Home</a> | </p>
+            <p class="text-muted">&copy; Philip Tang 2017 | <a href="/campgrounds">Home</a></p>
           </div>
         </footer>
         <!-- jQuery CDN -->
