--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,11 +1,11 @@
 <% include ../partials/header %>
   <div class="row">
     <div class="col-md-3">
-      <p class="lead">
-        <%=campground.name%>
-      </p>
-      <div class="thumbnail">
-        <img class="img-responsive" src="<%= user.avatar %>">
+      <p class="lead">YelpCamp</p>
+      <div class="list-group">
+        <li class="list-group-item active">Info 1</li>
+        <li class="list-group-item">Info 2</li>
+        <li class="list-group-item">Info 3</li>
       </div>
       <div id="map"></div>
     </div>
