--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,12 +1,9 @@
 <% include ../partials/header %>
   <div class="row">
     <div class="col-md-3">
-      <p class="lead">YelpCamp</p>
-      <div class="list-group">
-        <li class="list-group-item active">Info 1</li>
-        <li class="list-group-item">Info 2</li>
-        <li class="list-group-item">Info 3</li>
-      </div>
+      <p class="lead">
+        <%=campground.name%>
+      </p>
       <div id="map"></div>
     </div>
     <div class="col-md-9">
